Fix URLs and remove duplicate import

--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 SECRET_KEY=2@135124(078-783)(8280236625*
 DEBUG=True
 ALLOWED_HOSTS=127.0.0.1,localhost
-ALLOWED_HOSTS = ['hotel-management-vjjc.onrender.com']
+ALLOWED_HOSTS=hotel-management-vjjc.onrender.com,127.0.0.1,localhost
+
 
 
 DB_ENGINE=django.db.backends.mysql
